# echought

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: push_to_ecr.yaml
src/: main.rs
