[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde_json = "1.0.94"
onnxruntime = "0.0.14"
tokenizers = "0.13.2"
actix-cors = "0.6.4"
serde = {version = "1.0", features = ["derive"]}
